WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239716
[CSS Typed OM] Fix AttributeStyleMap.get for list values
https://bugs.webkit.org/show_bug.cgi?id=239716
Summary
[CSS Typed OM] Fix AttributeStyleMap.get for list values
Antti Koivisto
Reported
2022-04-25 04:19:25 PDT
It doesn't work correctly.
Attachments
Patch
(5.18 KB, patch)
2022-04-25 04:35 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2022-04-25 04:35:11 PDT
Created
attachment 458259
[details]
Patch
EWS
Comment 2
2022-04-25 11:26:13 PDT
Committed
r293333
(
249956@main
): <
https://commits.webkit.org/249956@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 458259
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-04-25 11:27:13 PDT
<
rdar://problem/92283710
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug