[CSS Typed OM] Fix AttributeStyleMap.get for list values https://bugs.webkit.org/show_bug.cgi?id=239716

Reviewed by Alan Bujtas.

Source/WebCore:

Test: css-typedom/typed-om-perspective-value.html

* css/typedom/CSSStyleValueFactory.cpp:
(WebCore::CSSStyleValueFactory::reifyValue):

The list here hasn't been deep copied. Don't move away a member.

* css/typedom/CSSStyleValueFactory.h:

Passing Ref<>&& instead of Ref<> here is a bug-prone over-optimization.

LayoutTests:

* css-typedom/typed-om-perspective-value-expected.txt: Added.
* css-typedom/typed-om-perspective-value.html: Added.

Canonical link: https://commits.webkit.org/249956@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293333 268f45cc-cd09-0410-ab3c-d52691b4dbfc