Source/WebCore/css/typedom/CSSStyleValueFactory.h
@@ -45,7 +45,7 @@ class StylePropertyShorthand;
 class CSSStyleValueFactory {
 public:
     
-    static ExceptionOr<Ref<CSSStyleValue>> reifyValue(Ref<CSSValue>&&, Document* = nullptr);
+    static ExceptionOr<Ref<CSSStyleValue>> reifyValue(Ref<CSSValue>, Document* = nullptr);
     
     static ExceptionOr<void> extractCSSValues(Vector<Ref<CSSValue>>&, const CSSPropertyID&, const String&);
     static ExceptionOr<void> extractShorthandCSSValues(Vector<Ref<CSSValue>>&, const CSSPropertyID&, const String&);
